<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CursoAndroid</string>
    <string name="hello">Hola Mundo! Este es el Curso de Android!</string>
    <string name="helloWidget">Hola! Este es mi primer Widget!</string>
    
    <string name="HolaMundo">Hola Mundo</string>
    <string name="MostrarSaludo">Mostrar Saludo</string>
    <string name="ProcesarFormulario">ProcesarFormulario</string>
    <string name="DemoAppFacturas">Demo App Facturas</string>
    <string name="VisorFicheros">Visor Ficheros</string>
    <string name="ProcesadoXML">Procesar XML</string>
    <string name="FicheroMemInterna">Fichero Memoria Interna</string>
    <string name="LanternWidget">Widget Linterna</string>
    <string name="TestLocationGPS">Test Location GPS</string>
    <string name="DemoMapas">Demo Mapas</string>
    <string name="Camara">Camara</string>
    <string name="Fragments">Fragments</string>
    
    <string name="celda1">Celda Número 1</string>
    <string name="celda2">Celda Número 2</string>
    <string name="celda3">Celda Número 3</string>
    <string name="celda4">Celda Número 4</string>
    
    <string name="introduzcaNombre">Introduzca su nombre: </string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonEnviar">Enviar</string>
    <string name="botonGuardar">Guardar</string>
    <string name="botonNuevaFactura">Nueva Factura</string>
    
    <string name="checkBoxText">Mostrar Jugadores:</string>
    <string name="radioGroupText">Seleccione Equipo:</string>
    <string name="listViewText">Seleccione Jugador:</string>
    <string name="spinnerText">Seleccione Competicion: </string>
    
    <string name="mostrarJugadores">Mostrar Jugadores?</string>
    <string name="equipo">Equipo:</string>
    <string name="competicion">Competicion:</string>
    
    <string name="aplicacionMenu">Aplicacion con Menus</string>
    
    <string name="foto">¡Foto!</string>
    
    <string name="concepto">Concepto</string>
    <string name="fecha">Fecha</string>
    <string name="importe">Importe</string>
    
    <string name="miwidget">Mi Widget</string>
    
    <string name="precision">Precision (Metros)</string>
    <string name="altitud">Altitud (Metros)</string>
    <string name="latitud">Latitud (Grados)</string>
    <string name="longitud">Longitud (Grados) </string>
    <string name="velocidad">Velocidad (Km/hora)</string>
    <string name="tiempo">Tiempo</string>
    <string name="detener">Detener</string>
    <string name="obtener_datos_gps">Obtener Datos GPS</string>
    <string name="calcular_distancia">Calcular Distancia</string>
    <string name="ver_ruta">Ver Ruta</string>
    
    <string name="action_settings">Settings</string>
    <string name="EncenderLinterna">Encender Linterna</string>
    <string name="ApagarLinterna">Apagar Linterna</string>
    
    <string name="botonEntrada">Por favor, pulse para introducir su nombre...</string>
    <string name="botonVolver">Volver</string>
    <string name="botonFicheros">Ver Ficheros</string>
    <string name="textoFichero">"Contenido Fichero:"</string>

</resources>
