<?xml version="1.0" encoding="utf-8"?>


<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tablaFacturas"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

    <TableRow
		android:id="@+id/tableRowButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
    	
    	<Button
			android:id="@+id/botonNuevaFactura"
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:text="@string/botonNuevaFactura"/>
    	
    </TableRow> 
    
	<TableRow
		android:id="@+id/tableRow1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
	    <TextView  
    		android:id="@+id/TextViewConcepto" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/concepto" />
	     
	    <TextView  
    		android:id="@+id/TextViewFecha" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/fecha"/>
	    
	    <TextView  
    		android:id="@+id/TextViewImporte" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/importe"/>
	    
	</TableRow>
	
</TableLayout>
