<?xml version="1.0" encoding="utf-8"?>

<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/celda1"
        		android:padding="20dp"> 
        	</TextView>
				
        	<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/celda2"
        		android:padding="20dp"> 
        	</TextView>
				
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/celda3"
        		android:padding="20dp"> 
        	</TextView>

			<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/celda4"
        		android:padding="20dp"> 
        	</TextView>
        	
		</TableRow>
		
</TableLayout>