<?xml version="1.0" encoding="utf-8"?>

<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tablaFacturas"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<TableRow
		android:id="@+id/tableRow1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView  
    		android:id="@+id/TextViewConcepto" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/concepto" />
	    
	    <EditText 
			android:id="@+id/EditTextConcepto" 
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:width="130dp" />
	    
	</TableRow>     
	
	<TableRow
		android:id="@+id/tableRow2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView  
    		android:id="@+id/TextViewFecha" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/fecha"/>
		
		<EditText 
			android:id="@+id/EditTextFecha" 
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:width="130dp" />
		
	</TableRow>    
	
	<TableRow
		android:id="@+id/tableRow3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView  
    		android:id="@+id/TextViewImporte" 
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/importe"/>
	    
	    <EditText 
			android:id="@+id/EditTextImporte" 
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:width="130dp" />
	    
	</TableRow>
	
	<TableRow
		android:id="@+id/tableRow4"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	    
	    <Button
		android:id="@+id/botonGuardar"
		android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:text="@string/botonGuardar"/> 
	
	</TableRow>    
	
</TableLayout>

