<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <View android:layout_width="match_parent"
    	  android:layout_height="15dp" /> 
    
    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Demo Utilizacion GPS" />
    
    <View android:layout_width="match_parent"
    	  android:layout_height="15dp" />  
    
    <TableLayout
          android:id="@+id/tablaDatos"
          android:layout_width="match_parent"
      	  android:layout_height="wrap_content" 
          android:scrollbars="vertical" >
        
          <TableRow
        	android:id="@+id/tableRow1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/precision"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/precision" />	
              
              <EditText
            		android:id="@+id/EditTextPrecision"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" 
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
          
          
          <TableRow
        	android:id="@+id/tableRow2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/altitud"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/altitud" />	
              
              <EditText
            		android:id="@+id/EditTextAltitud"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
          
         <TableRow
        	android:id="@+id/tableRow3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/latitud"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/latitud" />	
              
              <EditText
            		android:id="@+id/EditTextLatitud"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
          
          <TableRow
        	android:id="@+id/tableRow4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/longitud"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/longitud" />	
              
              <EditText
            		android:id="@+id/EditTextLongitud"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
        
              
         <TableRow
        	android:id="@+id/tableRow5"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/velocidad"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/velocidad" />	
              
              <EditText
            		android:id="@+id/EditTextVelocidad"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
          
          <TableRow
        	android:id="@+id/tableRow6"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <TextView
                 	android:id="@+id/tiempo"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/tiempo" />	
              
              <EditText
            		android:id="@+id/EditTextTiempo"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:ems="10" 
            		android:inputType="text"
            		android:clickable="false" 
        			android:cursorVisible="false" 
        			android:focusable="false" 
        			android:focusableInTouchMode="false"/>
              
          </TableRow>
          
          <TableRow
        	android:id="@+id/tableRow7"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
        	
              <Button
        		android:id="@+id/botonObtenerDatosGps"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/obtener_datos_gps" />	
              
              <Button
        		android:id="@+id/botonDetener"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/detener" />
              
          </TableRow>
          
    </TableLayout>   

    <Button
        android:id="@+id/botonCalcularDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_distancia" />
              
        
</LinearLayout>
